[package]
name = "tokio-http2"
version = "0.1.2"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["http2", "hpack", "huffman", "tls", "tokio"]
repository = "https://github.com/lambdastackio/tokio-http2"
homepage = "https://lambdastackio.github.io/tokio-http2/tokio-http2"
documentation = "https://lambdastackio.github.io/tokio-http2/tokio-http2"
description = """
HTTP/2 and HPACK library to be used in client and server. All of the multiplexing is based on the tokio project.
"""

[dependencies]
url = "1"
term = "0.4"
clap = "2"
lsio = "0"
rustc-serialize = "0.3"
bitflags = "0"
byteorder = "0"
log = "0"
futures = "0.1"
futures-cpupool = "0.1"
net2 = "0.2"
time = "0.1"
spmc = "0.2"
native-tls = "0.1.0"
mime = "0.2"
unicase = "1.0"
language-tags = "0"
multipart = "0"
tokio-core = "0"
tokio-tls = { git = "https://github.com/tokio-rs/tokio-tls" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger" }
httparse = { git = "https://github.com/lambdastackio/httparse" }

[dependencies.cookie]
version = "0.3"
default-features = false
