[package]
name = "tokio-http2"
version = "0.1.9"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["http2", "hpack", "http", "tls", "tokio"]
repository = "https://github.com/lambdastackio/tokio-http2"
homepage = "https://lambdastackio.github.io/tokio-http2/tokio_http2"
documentation = "https://lambdastackio.github.io/tokio-http2/tokio_http2"
description = """
HTTP/1.1 Library (HTTP/2 coming soon) using Tokio Project (core, proto, service). Used with https://github.com/lambdastackio/httpd.
"""

[dependencies]
url = "1"
term = "0.4"
clap = "2"
lsio = "0"
rustc-serialize = "0.3"
bitflags = "0"
byteorder = "0"
log = "0"
futures = "0.1"
futures-cpupool = "0.1"
net2 = "0.2"
time = "0.1"
chrono = "0"
spmc = "0.2"
native-tls = "0.1.0"
mime = "0"
mime_guess = "1"
rand = "0.3"
tempdir = ">=0.3.4"
buf_redux = "0"
memchr = "0"
regex = "0"
libc = "0"
unicase = "1"
language-tags = "0"
# multipart = { path = "../multipart" }
httparse = "1"
slog = "1"
slog-json = "1"
slog-term = "1"
slog-scope = "0"
slog-stream = "1"
slog-syslog = "0"
slog-envlogger = "0"
tokio-core = "0"
tokio-tls = "0"
tokio-proto = "0.1"
tokio-service = "0.1"
pretty_env_logger = "0"

# [dependencies.cookie]
# version = "0.3"
# default-features = false
